--- a/src/server/projects/detail/profession-history.njk
+++ b/src/server/projects/detail/profession-history.njk
@@ -62,7 +62,7 @@
           {% endfor %}
         </div>
       {% else %}
-        <p class="govuk-body">No history found for this profession assessment.</p>
+        <p class="govuk-body">No history found for this profession update.</p>
       {% endif %}
 
       {{ govukButton({
