--- a/src/server/projects/index.njk
+++ b/src/server/projects/index.njk
@@ -1,5 +1,7 @@
+{% if isAuthenticated %}
 {{ govukButton({
   text: "Add new project",
   href: "/projects/add",
   classes: "govuk-button--secondary"
-}) }} 
+}) }}
+{% endif %} 
