--- a/src/server/projects/detail/delete-profession.njk
+++ b/src/server/projects/detail/delete-profession.njk
@@ -16,7 +16,7 @@
   <p class="govuk-body">Project: {{ project.name }}</p>
 
   {{ govukWarningText({
-    text: "This will permanently remove the " + profession.name + " assessment from this project.",
+    text: "This will permanently remove the " + profession.name + " update from this project.",
     iconFallbackText: "Warning"
   }) }}
 
@@ -25,7 +25,7 @@
     
     <div class="govuk-button-group">
       {{ govukButton({
-        text: "Delete Assessment",
+        text: "Delete Update",
         classes: "govuk-button--warning"
       }) }}
       
