--- a/src/server/projects/detail/edit-profession.njk
+++ b/src/server/projects/detail/edit-profession.njk
@@ -34,7 +34,7 @@
         id: "status",
         name: "status",
         label: {
-          text: "Assessment Status",
+          text: "Update Status",
           classes: "govuk-label--s"
         },
         items: statusOptions,
@@ -54,7 +54,7 @@
 
     <div class="govuk-button-group">
       {{ govukButton({
-        text: "Save Assessment"
+        text: "Save Update"
       }) }}
       
       {{ govukButton({
