--- a/src/server/common/templates/layouts/page.njk
+++ b/src/server/common/templates/layouts/page.njk
@@ -10,6 +10,7 @@
 
 {% block head %}
   <link href="{{ getAssetPath('stylesheets/application.scss') }}" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/accessible-autocomplete@2.0.4/dist/accessible-autocomplete.min.css">
 {% endblock %}
 
 {% block header %}
@@ -61,4 +62,6 @@
 
 {% block bodyEnd %}
   <script type="module" src="{{ getAssetPath('application.js') }}"></script>
+  <script src="https://cdn.jsdelivr.net/npm/accessible-autocomplete@2.0.4/dist/accessible-autocomplete.min.js"></script>
+  {% block pageScripts %}{% endblock %}
 {% endblock %}
